--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,55 @@
+absl-py==0.7.1
+atomicwrites==1.3.0
+attrs==19.1.0
+bintrees==2.0.7
+bleach==1.5.0
+cbpro==1.1.4
+certifi==2019.3.9
+Click==7.0
+colorama==0.4.1
+decorator==4.4.0
 Flask==0.12.2
 Flask-Cors==3.0.3
-gdax==1.0.6
 GPy==1.8.4
--e git+https://github.com/SheffieldML/GPyOpt.git@fff3f65c4e76bed69ce6dc55c459a5d37db5b243#egg=GPyOpt
+GPyOpt==1.2.5
+html5lib==0.9999999
+importlib-metadata==0.18
+itsdangerous==1.1.0
+Jinja2==2.10.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
+mkl-fft==1.0.6
+mkl-random==1.0.1
+more-itertools==7.0.0
 numpy==1.13.3
+packaging==19.0
 pandas==0.20.3
+paramz==0.9.5
+Pillow==6.0.0
+pluggy==0.12.0
+protobuf==3.8.0
 psycopg2==2.7.3
+py==1.8.0
+pymongo==3.5.1
+pyparsing==2.4.0
+pytest==4.6.3
 python-box==3.1.1
+python-dateutil==2.8.0
+pytz==2019.1
 requests==2.13.0
 scikit-learn==0.19.1
+scipy==1.1.0
+six==1.10.0
 sklearn==0.0
+sortedcontainers==2.1.0
 SQLAlchemy==1.1.12
-TA-Lib==0.4.10
+TA-Lib==0.4.17
 tensorflow-gpu==1.5.0rc1
+tensorflow-tensorboard==1.5.1
+-e git+https://github.com/tensorforce/tensorforce.git@520a8d992230e382f08e315ede5fc477f5e26bfb#egg=tensorforce
+tqdm==4.32.1
+wcwidth==0.1.7
+websocket-client==0.40.0
+Werkzeug==0.15.4
+wincertstore==0.2
+zipp==0.5.1
